@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/03/24 20:14:37 wiz Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/02/27 00:22:07 ben Exp $
 include/SDL_framerate.h
 include/SDL_gfxPrimitives.h
 include/SDL_gfxPrimitives_font.h
@@ -7,8 +7,8 @@ include/SDL_rotozoom.h
 lib/libSDL_gfx.a
 lib/libSDL_gfx.la
 lib/libSDL_gfx.so
-lib/libSDL_gfx.so.0.0
-lib/libSDL_gfx.so.0
+lib/libSDL_gfx.so.10.0
+lib/libSDL_gfx.so.10
 share/doc/SDL_gfx/blank.gif
 share/doc/SDL_gfx/framerate-thumb.png
 share/doc/SDL_gfx/framerate.fig
